--- a/searchwebsite/searchengine/templates/search.html
+++ b/searchwebsite/searchengine/templates/search.html
@@ -19,18 +19,21 @@
 <body>
     <main class="d-flex container flex-column align-items-center">
         <a class="logo" href="/">
-            <img src="https://play-lh.googleusercontent.com/1-hPxafOxdYpYZEOKzNIkSP43HXCNftVJVttoo4ucl7rsMASXW3Xr6GlXURCubE1tA=w3840-h2160-rw" class="mb-4 logo" alt="SO Search Ninja" />
+            <img src="https://play-lh.googleusercontent.com/1-hPxafOxdYpYZEOKzNIkSP43HXCNftVJVttoo4ucl7rsMASXW3Xr6GlXURCubE1tA=w3840-h2160-rw"
+                class="mb-4 logo" alt="SO Search Ninja" />
         </a>
         <form id="form-search" class="w-100 d-flex" method="get" action="{% url 'search' %}">
             <input type="text" name="query" id="query" value="{{ request.GET.query }}" autofocus
                 placeholder="enter a query" autocomplete="off" />
             <button class="button" type="submit" id="search" value="Search"><i class="fas fa-search"></i></button>
         </form>
-        <pre>
+        <table class='table'>
             {% for result in searchresults %}
-            {{ result }}
+            <tr>
+                <td> {{ result }} </td>
+            </tr> 
             {% endfor %}
-        </pre>
+        </table>
     </main>
     <footer class="footer">
         <div class="container text-center">
