--- a/searchwebsite/searchengine/templates/search.html
+++ b/searchwebsite/searchengine/templates/search.html
@@ -34,6 +34,36 @@
             </tr> 
             {% endfor %}
         </table>
+        <br />
+        <nav class="content">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                <li class="page-item"><a class="page-link"
+                        href="?query={{ request.GET.query|urlencode }}&page={{page_obj.previous_page_number}}">&lsaquo;</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled"><a class="page-link" href="#">&lsaquo;</a></li>
+                {% endif %}
+                <li class="page-item page-number-of disabled"><a class="page-link" href="#">Page {{page_obj.number}} of
+                        {{page_obj.paginator.num_pages}}</a></li>
+                {% for i in page_obj.paginator.page_range %}
+                {% if page_obj.number == i %}
+                <li class="page-item page-number active"><a class="page-link"
+                        href="?query={{ request.GET.query|urlencode }}&page={{i}}">{{i}}</a></li>
+                {% else %}
+                <li class="page-item page-number"><a class="page-link"
+                        href="?query={{ request.GET.query|urlencode }}&page={{i}}">{{i}}</a></li>
+                {% endif %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                <li class="page-item"><a class="page-link"
+                        href="?query={{ request.GET.query|urlencode }}&page={{ page_obj.next_page_number}}">&rsaquo;</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled"><a class="page-link" href="#">&rsaquo;</a></li>
+                {% endif %}
+            </ul>
+        </nav>
     </main>
     <footer class="footer">
         <div class="container text-center">
