--- a/searchwebsite/searchengine/templates/search.html
+++ b/searchwebsite/searchengine/templates/search.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Enable loading content from the static folder -->
     {% load static %}
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}" />
+    <link rel="shortcut icon" type="image/png" href="./IMGs/phpmeXx6V.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
         integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
         crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="./CSSs/style.css">
     <title>My Search Engine</title>
 </head>
 
@@ -27,13 +28,13 @@
                 placeholder="enter a query" autocomplete="off" />
             <button class="button" type="submit" id="search" value="Search"><i class="fas fa-search"></i></button>
         </form>
-        <table class='table'>
-            {% for result in searchresults %}
-            <tr>
-                <td> {{ result }} </td>
-            </tr> 
-            {% endfor %}
-        </table>
+            <table class='table'>
+                {% for result in searchresults %}
+                <tr>
+                    <td> {{ result |safe }} </td>
+                </tr> 
+                {% endfor %}
+            </table>
         <br />
         <nav class="content">
             <ul class="pagination">
@@ -61,6 +62,9 @@
                 </li>
                 {% else %}
                 <li class="page-item disabled"><a class="page-link" href="#">&rsaquo;</a></li>
+                {% endif %}
+                {% if page_obj.paginator.num_pages > 5%}
+                    <li class="page-item disabled"> <a class="page-link" href="#">...</a></li>
                 {% endif %}
             </ul>
         </nav>
